shixun5/labBison/src/expr1-s2.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: EOL
    4     | exp EOL

    5 exp: exp PLUS term
    6    | exp MINUS term
    7    | term

    8 term: term MULT pmfact
    9     | term DIV pmfact
   10     | fact

   11 pmfact: fact
   12       | MINUS fact

   13 fact: NUMBER nfact
   14     | LB exp RB nfact

   15 nfact: EXPON fact
   16      | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <val> (258) 13
    PLUS <op> (259) 5
    MINUS <op> (260) 6 12
    MULT <op> (261) 8
    DIV <op> (262) 9
    EXPON <op> (263) 15
    EOL (264) 3 4
    LB (265) 14
    RB (266) 14


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    input (13)
        on left: 1 2
        on right: 0 2
    line (14)
        on left: 3 4
        on right: 2
    exp <val> (15)
        on left: 5 6 7
        on right: 4 5 6 14
    term <val> (16)
        on left: 8 9 10
        on right: 5 6 7 8 9
    pmfact <val> (17)
        on left: 11 12
        on right: 8 9
    fact <val> (18)
        on left: 13 14
        on right: 10 11 12 15
    nfact <val> (19)
        on left: 15 16
        on right: 13 14


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    EOL     shift, and go to state 4
    LB      shift, and go to state 5

    line  go to state 6
    exp   go to state 7
    term  go to state 8
    fact  go to state 9


State 2

    0 $accept: input $end .

    $default  accept


State 3

   13 fact: NUMBER . nfact

    EXPON  shift, and go to state 10

    $default  reduce using rule 16 (nfact)

    nfact  go to state 11


State 4

    3 line: EOL .

    $default  reduce using rule 3 (line)


State 5

   14 fact: LB . exp RB nfact

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 5

    exp   go to state 12
    term  go to state 8
    fact  go to state 9


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    4 line: exp . EOL
    5 exp: exp . PLUS term
    6    | exp . MINUS term

    PLUS   shift, and go to state 13
    MINUS  shift, and go to state 14
    EOL    shift, and go to state 15


State 8

    7 exp: term .
    8 term: term . MULT pmfact
    9     | term . DIV pmfact

    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 7 (exp)


State 9

   10 term: fact .

    $default  reduce using rule 10 (term)


State 10

   15 nfact: EXPON . fact

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 5

    fact  go to state 18


State 11

   13 fact: NUMBER nfact .

    $default  reduce using rule 13 (fact)


State 12

    5 exp: exp . PLUS term
    6    | exp . MINUS term
   14 fact: LB exp . RB nfact

    PLUS   shift, and go to state 13
    MINUS  shift, and go to state 14
    RB     shift, and go to state 19


State 13

    5 exp: exp PLUS . term

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 5

    term  go to state 20
    fact  go to state 9


State 14

    6 exp: exp MINUS . term

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 5

    term  go to state 21
    fact  go to state 9


State 15

    4 line: exp EOL .

    $default  reduce using rule 4 (line)


State 16

    8 term: term MULT . pmfact

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 22
    LB      shift, and go to state 5

    pmfact  go to state 23
    fact    go to state 24


State 17

    9 term: term DIV . pmfact

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 22
    LB      shift, and go to state 5

    pmfact  go to state 25
    fact    go to state 24


State 18

   15 nfact: EXPON fact .

    $default  reduce using rule 15 (nfact)


State 19

   14 fact: LB exp RB . nfact

    EXPON  shift, and go to state 10

    $default  reduce using rule 16 (nfact)

    nfact  go to state 26


State 20

    5 exp: exp PLUS term .
    8 term: term . MULT pmfact
    9     | term . DIV pmfact

    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 5 (exp)


State 21

    6 exp: exp MINUS term .
    8 term: term . MULT pmfact
    9     | term . DIV pmfact

    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 6 (exp)


State 22

   12 pmfact: MINUS . fact

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 5

    fact  go to state 27


State 23

    8 term: term MULT pmfact .

    $default  reduce using rule 8 (term)


State 24

   11 pmfact: fact .

    $default  reduce using rule 11 (pmfact)


State 25

    9 term: term DIV pmfact .

    $default  reduce using rule 9 (term)


State 26

   14 fact: LB exp RB nfact .

    $default  reduce using rule 14 (fact)


State 27

   12 pmfact: MINUS fact .

    $default  reduce using rule 12 (pmfact)
